<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World, CAAActivity!</string>
    <string name="app_name">Matey Find-Arrr!</string>
    <string name="CE">Current Event</string>
    <string name="ME">Upcoming Events</string>
    <string name="CrE">Create Event</string>
    <string name="title">Matey Find-Arrr!</string>
    <string name="imgDesc">Image</string>
    <string name="fm">Friend Manager</string>
    <color name="bg1">#3a5998</color>
    <color name="bg2">#123899</color>
    <string name="reg">Register User</string>
    <string name="set_boundary_title">Set Boundary</string>
    <string name="select_location">1. Long tap on your desired location</string>
    <string name="drag_slider">2. Drag slider to set boundary</string>
    <string name="save">Save</string>
    <string name="boundary">"Boundary: "</string>
    <string name="addBoundary">Add boundary (optional)</string>
    <string name="help">\?</string>
    <string name="EE">Edit Event</string>
    <string name="Start">Start:</string>
    <string name="End">End:</string>
    <string name="Date">Date</string>
    <string name="Time">Time</string>
    <string name="TitleHint">Title</string>
    <string name="Description">Enter an event description here</string>
    <string name="SelectFriends">Select friends</string>

</resources>