<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/map2"
    android:orientation="vertical"
     >
    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_location"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/black"
         />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/drag_slider"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/black"
         />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal" >

        <Button
            android:id="@+id/button1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|left"
            android:layout_weight="70"
            android:text="@string/save" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|right"
            android:layout_weight="30"
            android:paddingBottom="10dip"
            android:paddingLeft="5dip"
            android:paddingTop="10dip"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/black"
             />

    </LinearLayout>

    <FrameLayout
        android:id="@+id/map_placeholder"
        android:layout_width="match_parent"
        android:layout_height= "0dip"
        android:layout_weight="1">
        
		<co880.CAA.Model.ClickableMapView 
        android:id="@+id/mapView"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:clickable="true"
        android:apiKey="0xtHkqNJPcFIc9ou7b-gMUU1zBXwtXUe9jarFwQ" />
		
		<!--Dan's Key=0CMeo42cvLH_2_bZlrwtjdgk-6eJJVp2d7ySVIQ-->
		<!--Ka Lan's Key="025ZghV4G92t1Y-nkz3FyO77u5awBLOtlnO5y-A"-->
		<!-- Adam's Key =0xtHkqNJPcFKrAQSYQPRvDgHpuIpfLcvXsppuow -->
		<!-- Adam's Vista key "0xtHkqNJPcFIwcceCYvlPGDOnG55zIT7gI9AFgA" -->

		</FrameLayout>

    <SeekBar
        android:id="@+id/seekBar1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop = "5dip"
        android:paddingLeft="20dip"
        android:paddingRight="20dip"
        android:layout_marginBottom = "20dip"/>

</LinearLayout>